[metadata]
name = npc-image-analysis
version = 0.0.1
author = Ashley Hardy
author_email = ahardy.contact@gmail.com
description = NPC Image Analysis is a Python app for analyzing 3D images of Neural Progenitor Cells (NPCs). 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Anhardy1999/NPC_Image_Analysis
project_urls =
    Bug Tracker = https://github.com/Anhardy1999/NPC_Image_Analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = docs
packages = find:
python_requires = >=3.6

[options.packages.find]
where = docs
